# milton-prism

./: .gitignore  Makefile  go.mod  go.sum  milton-prism-panel
.claude/: settings.json
.claude/hooks/: task-completed-hook.sh
docs/: openapi.yaml  pendientes-roadmap.md
docs/prism/: camino-b-setup.md  generation-limitations.md  git-push-blockers.md  milton-prism-analysis-engine-spec.md  milton-prism-analysis-tier1-tasks.md  milton-prism-architecture-canon.md  milton-prism-bootstrap-task.md  milton-prism-camino-b-tasks.md  milton-prism-cpp-profile.md  milton-prism-csharp-profile.md  milton-prism-decomposition-engine-spec.md  milton-prism-decomposition-tasks.md  milton-prism-git-push-spec.md  milton-prism-go-profile.md  milton-prism-java-profile.md  milton-prism-migrability-engine-spec.md  milton-prism-monolith-topology.md  (+28 more)
infra/: Dockerfile.frontend  Dockerfile.gateway  Dockerfile.service  Dockerfile.worker  build.sh
protobuf/: buf.deliverable.openapi.yaml  buf.docs.gen.yaml  buf.go.gen.yaml  buf.yaml
python/: .coverage  .importlinter  conftest.py  pyproject.toml
python/.import_linter_cache/: services.meta.json  shared.meta.json
python/.pytest_cache/v/cache/: lastfailed  nodeids
python/.ruff_cache/0.9.10/: 2705530114650299284
python/scripts/: gen_proto.py
python/services/identity/: __main__.py  wire.py
python/services/identity/application/: __init__.py  service.py
python/services/identity/domain/: __init__.py  domain.py  errors.py
python/services/identity/infrastructure/grpc_handlers/: __init__.py  identity_handler.py
python/services/identity/infrastructure/repositories/: __init__.py  password_hasher.py  session_store.py  token_manager.py  transaction_manager.py  user_repository.py
python/services/identity/ports/: __init__.py  auth.py  repository.py  transaction.py
python/services/identity/tests/: test_service.py
python/services/migration/: __main__.py  wire.py
python/services/migration/application/: service.py
python/services/migration/domain/: __init__.py  domain.py  errors.py
python/services/migration/infrastructure/grpc_handlers/: migration_handler.py
python/services/migration/infrastructure/repositories/: analysis_client.py  identity_client.py  migration_repository.py  repository_client.py
python/services/migration/ports/: analysis_client.py  identity_client.py  migration.py  repository_client.py  transaction.py
python/services/migration/tests/: test_service.py
python/services/repository/: __main__.py  wire.py
python/services/repository/application/: __init__.py  service.py
python/services/repository/domain/: __init__.py  domain.py  errors.py
python/services/repository/infrastructure/grpc_handlers/: repository_handler.py
python/services/repository/infrastructure/repositories/: git_client.py  identity_client.py  repository_repository.py
python/services/repository/ports/: __init__.py  git_client.py  identity_client.py  repository.py  transaction.py
python/services/repository/tests/: test_service.py
python/shared/auth/: __init__.py  extractor.py
python/shared/config/: __init__.py  loader.py
python/shared/errors/: __init__.py  domain_error.py  mapper.py
python/shared/grpc_client_sdk/: __init__.py  builder.py
python/shared/interceptors/: __init__.py  interceptors.py
python/shared/logging/: __init__.py
python/shared/mongo_client/: __init__.py  client.py  transaction_manager.py
python/shared/tests/: test_config.py  test_domain_error.py  test_logger.py  test_transaction_manager.py
(+582 files in other folders)
